# perp-liquidity

./: .gitignore  README.md  pyproject.toml
config/: fees.yaml
examples/: BTC_funding_20260528_144413.csv  BTC_oi_20260528_144413.csv  BTC_slippage_20260528_144413.csv
src/perp_liquidity/: cli.py  output.py
src/perp_liquidity/analyzers/: funding.py  liquidations.py  open_interest.py  slippage.py
src/perp_liquidity/fetchers/: apex.py  aster.py  base.py  edgex.py  extended.py  grvt.py  hyperliquid.py  lighter.py  paradex.py
tests/: test_apex.py  test_aster.py  test_cli.py  test_edgex.py  test_extended.py  test_funding_analyzer.py  test_grvt.py  test_liquidations_analyzer.py  test_oi_analyzer.py  test_slippage.py
